
syntax = "proto3";


import "google/protobuf/timestamp.proto";


package proto.todo.v1;

option go_package = "api_server/internal/grpc_gen/todo/v1;todo_v1";

enum Status {
    UNSPECIFIED = 0;
    INCOMPLETE = 1;
    COMPLETE = 2;
}


message Todo {
    string title = 1;
    string description = 2;
    google.protobuf.Timestamp limit = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp update_at = 5;
    Status status = 6;
    bool is_activate = 7;
}

message TodoList {
    repeated Todo Result = 1;
}

message GetALLRequest {
    string request = 1;
}


message SearchRequest {
  string query = 1;
}


message TodoResponse {
    Todo result = 1;
}

message CreateTodoRequest{
    Todo new_todo = 1;
    
}

message CreateTodoResponse {
    bool result = 1;

}

message NotifyStreamRequest {
    bool desier = 1;
}

message NotifyStreamResponse {
    Todo notify_todo = 1;
}


service TodoService {
    rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse){};
    rpc GetAllTodo(GetALLRequest) returns(TodoList){};
    rpc FindTodo(stream SearchRequest) returns(stream TodoList){};
}

